UnitsApi/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: units-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: units-api
  template:
    metadata:
      labels:
        app: units-api
    spec:
      containers:
      - name: units-api
        image: docker.io/mohamedhamdy120/units-api:v11
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: units-api-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: units-api
