UnitsApi/k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb-service
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: mongodb
        image: bitnami/mongodb:latest
        securityContext:
          runAsUser: 1001
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 27017
        command:
        - /bin/bash
        - -c
        - /scripts/init.sh
        volumeMounts:
        - name: mongodb-init-script
          mountPath: /scripts
        - name: mongodb-data
          mountPath: /bitnami/mongodb
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 30
          periodSeconds: 20
      volumes:
      - name: mongodb-init-script
        configMap:
          name: mongodb-init-script
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: managed-csi  
      resources:
        requests:
          storage: 5Gi
